--- a/VRChat/64/1220464.html
+++ b/VRChat/64/1220464.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "WO90mVU674Jp+EtKRMANFYIjLH0EA1SeegoMvDcAWZI="></script>
+    "xIyGRUeLkpnhkyyQ7QolG6oFN7UKkDGy0eqwIHPLiq4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"TD64-2019.Spring-(VRoid男性素体用下着)","description":"まるでゆめみたい工房の、VRoid男性素体用の下着。2019年春モデルですの。\n\n男性下着かつ、陰部は露出しておりませんのでR-18ではないと思われますが、ＴバックどころかYバックなのでお尻はまるだしになりますので、ご注意くださいませの。\n\n※著作権は放棄しておりませんの。個人、商用、R-18など問わず使用して頂いてよろしいのですが。\n\n再配布、販売、自分が作った発言等はおやめくださいませ。加工はご自由にお楽しみくださいませ。","url":"https://booth.pm/ja/items/1220464","offers":{"priceCurrency":"JPY","@type":"Offer","price":"330"},"image":"https://booth.pximg.net/c/620x620/8c68c3d7-dd1b-4851-93cf-f32c4e7fd983/i/1220464/5359f122-2f5f-4b86-affd-9359659f86e6_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WO90mVU674Jp+EtKRMANFYIjLH0EA1SeegoMvDcAWZI="></script>
+    nonce="xIyGRUeLkpnhkyyQ7QolG6oFN7UKkDGy0eqwIHPLiq4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1220464/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1220464/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
