--- a/VRChat/63/1218763.html
+++ b/VRChat/63/1218763.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dTSlddvnvR1YZvRiC8QT8Xvk/2u2RWwgog9G/He8tpM="></script>
+    "XzZU7P0/j0mXmJXwMaGaPVkan/AcHHpMbeTPylsINCY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ペンギンの擬人化「南極の子」　　VRC向け 3Dモデル Unity package","description":"本製品は、VRChat向け、3Dモデルです\n・4頭身モデルで作成\n・表情は現在4つ\n・リップシンク対応\n・フルトラッキングは製作者使用不可のため詳細は不明\n　※フレンドによる試運転にて通常に稼働は確認済み(不調性部分の可能性は健在)\n\n▼当製品について\n本モデルは「Ykr-Armament.co」が南極でペンギン研究をするために送り込んだ「ぺんぐぃんさん」が発見した\n南極に住んでいる子です。\n\nコウテイペンギンの擬人化だと思われる服装に、アデリーペンギンだと思われる形のバックを所持しています\n\n\n▼製品内容\n/readme\n/Nankyokunoko.unitypackage\n/FBXファイル\n/テクスチャファイル(4texture * 下記各種データ　合計24枚)\n---各種「Color」「Height」「Metallic」「Normal」「Normal_DirectX」「Roughness」\n\n初期のシェーダー設定はノーマルですので、ご自由に変更してください。\n\n※製作者は「Reflex Shader 2」を使用しております\nBooth画像も「Reflex Shader 2」を使用しております\n\n▼使用に関して\n１．著作権は製作者「Yuuki-rin」に帰属、改変後もYuuki-rinに帰属\n２．使用禁止事項\n→再配布、改変後の再配布は禁止とします\n→改変後であっても、元のモデルの自作発言は禁止とします。\n　※改変後の部分等は自慢してもらっても大丈夫です。元々ある部分のみが対象です。\n\n３．使用可能事項\n→「テクスチャ改変」「モデル改変」「UVの改変」「動画」「営業利用」等、基本的にはなんでもOKです\n※可能かどうか、ご不明点ございましたら、ご連絡お願いいたします。\n\n４．免責事項\n→本データを利用による損害に対する責任は追わないものとさせていただきます。\n→特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\nその他不明点等ございましたら、Twitterへご連絡お願いいたします。\n＠Yukki_WarVtuber\n\nURL:https://twitter.com/Yukki_WarVtuber\n\n６．モデリングについて\n初の人型モデルの作成となっております。\n不思議な部分や、不慮な部分当ございますが、ご承知ください\n※アップデート予定部分が多数ありますが頑張ってまいります\n","url":"https://booth.pm/ja/items/1218763","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/8488e81a-360b-4cf8-a9ff-572ec8fd6b04/i/1218763/618df275-5c7f-48ea-a766-8cebf65a0d56_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dTSlddvnvR1YZvRiC8QT8Xvk/2u2RWwgog9G/He8tpM="></script>
+    nonce="XzZU7P0/j0mXmJXwMaGaPVkan/AcHHpMbeTPylsINCY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1218763/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1218763/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
