--- a/VRChat/26/1220326.html
+++ b/VRChat/26/1220326.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qcpibnQpsK5bWvjQttnv7aABJGIxjiNQzsvNe7aWcFY="></script>
+    "6VGXqVVJ9goE8+NT+XEkkZkkSoj/IpuQ0XV4eui2Yzw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】珈琲色バッグ△944","description":"珈琲色をしたバッグの3Dモデルです。\n以下のファイルが入っています。\n\n・BagBody.fbx … バッグ本体のFBX形式の3Dモデル\n・BagBelt.fbx … 肩ひものFBX形式の3Dモデル\n・Textures/TexBag.png … バッグ本体の3Dモデルで使用しているテクスチャ\n・Textures/TextureBelt.png … 肩ひもの3Dモデルで使用しているテクスチャ\n・Bag.unitypackage … 3Dモデルを含むUnityパッケージ\n・利用規約.txt … 使用前に必ずお読みください\n\n【重要】\nBagBelt（肩ひも）にはアーマチュアが入っていますので、お好みのかたちに曲げてご使用ください。\nなお、デフォルトのかたちはクレリックちゃんの体型に合わせて作成されています。\n\n\n著作権フリーです。\nCC0 パブリック・ドメイン提供\nhttps://creativecommons.org/publicdomain/zero/1.0/deed.ja","url":"https://booth.pm/ja/items/1220326","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5a686316-94b9-4b02-8f55-b546b6d93df5/i/1220326/c277eaf5-ec6a-4d21-9dfb-1c7d9415a59b_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qcpibnQpsK5bWvjQttnv7aABJGIxjiNQzsvNe7aWcFY="></script>
+    nonce="6VGXqVVJ9goE8+NT+XEkkZkkSoj/IpuQ0XV4eui2Yzw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,10 +186,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1220326/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              287
+                              288
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1220326/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              287
+                              288
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
