--- a/VRChat/98/1220098.html
+++ b/VRChat/98/1220098.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "a2mjf9ZTRIBXrweXzc2UoH0hxhI8JOeU0J+jEbXR3tA="></script>
+    "Fv0j2/QeZtD4Lfo0KIhOv6ymxEEHAe+65DjIwoVu6Wg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dアバター　ペット先生","description":"開発者 ペット先生","url":"https://booth.pm/ja/items/1220098","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/282d2356-85a5-443d-a5f2-0ccc446819d9/i/1220098/c712717a-9587-4d7e-a350-91baadc618a0_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a2mjf9ZTRIBXrweXzc2UoH0hxhI8JOeU0J+jEbXR3tA="></script>
+    nonce="Fv0j2/QeZtD4Lfo0KIhOv6ymxEEHAe+65DjIwoVu6Wg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +157,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1220098/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -170,14 +172,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1220098/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
