--- a/VRChat/29/1176429.html
+++ b/VRChat/29/1176429.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "s1l2GJGSas90dn8By0X2sRX9tUj04LiknmNsxKgStds="></script>
+    "hBZySvBiHQu/nGX+27KL2Vz4qw5GHa7Pz7zsjrBnRIU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】ファンタジーな剣","description":"・ファンタジーっぽい剣のモデルとテクスチャのセットです。\n・設定など全く考えず作りましたので自由に設定を付加してお使いいただくのがおすすめです。\n\n///利用規約///\n・このモデルには以下の規約を適用します\n\n黒蟻サンダー制作モデル共通小物無料配布作品用利用規約\n日本語版\nhttps://drive.google.com/file/d/1KCeZKRLp019ILPgKPtsbDIEzDexCW15m/view?usp=sharing\n英語版\nhttps://drive.google.com/file/d/1I9nzOoMEpWupRggxGYC6B_OCpi2X-fhk/view?usp=sharing\n\n\nモデル仕様\n本体：(SwordM1.FBX)\n△4896\nマテリアル数：1\nテクスチャサイズ：2048ピクセル平方\n\t\n作成者：Kuroari_Thunder(黒蟻サンダー)\nTwitter：@Kuroari_Thunder\n\n説明書等：Ver1.1\n最終更新：2021/4/12\n\nリリースノート\nVer1.1(2021/4/12)\n・規約改定、古い情報の修正\nVer1.0(2019/2/8)\n・公開","url":"https://booth.pm/ja/items/1176429","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ffd38964-fc99-43c6-b020-a76e2e47c238/i/1176429/2208b259-1145-45ee-829f-0983789963f0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="s1l2GJGSas90dn8By0X2sRX9tUj04LiknmNsxKgStds="></script>
+    nonce="hBZySvBiHQu/nGX+27KL2Vz4qw5GHa7Pz7zsjrBnRIU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1176429/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1176429/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
