--- a/VRChat/16/1217516.html
+++ b/VRChat/16/1217516.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lk55lt3pbfePEibhksQgU2Jcsrb3QpJhDBPfgM4Gl8M="></script>
+    "LEpuQBFT25cWspYtav58xjiFrRWRQM33+XM8ckepD/A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"我楽多印の歯車貯古齢糖‐大入‐","description":"私が愛をこめて作った我楽多印の歯車貯古齢糖です\nいろんな方に配れるように大容量です\n袋には10個チョコが入って計16100ポリゴンになります\nunitypackageには\n本体、取り出し用、パーティクルの３つのプレハブが入っています\nまた、袋と包み紙には開封用シェイプキーが設定してありますのでお好みでアニメーションに組み込んでください\n\nシェーダーはフレアさん(@whiteflare_vrc)作成のシェーダパック\"Unlit_WF_ShaderSuite\"(https://twitter.com/whiteflare_vrc/status/1084721244274999296)を使用させて頂いております\nこの場を借りて深く感謝致します","url":"https://booth.pm/ja/items/1217516","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/54d1b61a-a76a-4e92-aff9-20e36195e60e/i/1217516/16c4a9e5-d453-4527-882f-cc406c8904bd_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lk55lt3pbfePEibhksQgU2Jcsrb3QpJhDBPfgM4Gl8M="></script>
+    nonce="LEpuQBFT25cWspYtav58xjiFrRWRQM33+XM8ckepD/A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1217516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1217516/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               4
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
