--- a/VRChat/68/1216668.html
+++ b/VRChat/68/1216668.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HAvWy468f0bKYe1bLl1nlHPIgzJIyo1Zs5jlBxBn6PU="></script>
+    "FrWazuaj/JziLJUmNR4CJIvDqtCS0Tpk+5CS4KRayKw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベルトアタッチメントv2","description":"あまり使い道がなさそうなベルト用アタッチメントです。\n剣や小道具等を持ち運び可能になります。\n\n曲げる改変とかしたらサイドアタッチメントにもなるかも\n\n2019/2/9 更新\nアタッチメントと固定用バンドにボーンを追加して\n形を微調整できるようにしました。\n\n\n内容物\n・ベルトアタッチメント　FBX(ボーン有り無し2種)＋テクスチャ\n・固定用バンド　FBX(ボーン有り無し2種)＋テクスチャ\n・剣用の鞘　FBX+テクスチャ","url":"https://booth.pm/ja/items/1216668","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4a3cd6b-ee52-4b50-ba9a-4a4bdc690a8e/i/1216668/b32de1ff-00c0-477d-a455-6e799ae499ad_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HAvWy468f0bKYe1bLl1nlHPIgzJIyo1Zs5jlBxBn6PU="></script>
+    nonce="FrWazuaj/JziLJUmNR4CJIvDqtCS0Tpk+5CS4KRayKw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1216668/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              194
+                              195
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1216668/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              194
+                              195
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
